# noisereducecustom

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: demo.py
noisereducecustom/: __init__.py  base.py  core.py  generate_noise.py  nonstationary.py  plotting.py  stationary.py  stft_utils.py  utils.py
tests/: test_core.py
